<resources>
    <string name="app_name">舌尖上的佳木斯</string>
    <string name="author">用户登录</string>
    <string name="email">1050910152@qq.com</string>

    <string name="shopping_car">购物车</string>
    <string name="consume_history">购买记录</string>
    <string name="wallet">钱包</string>
    <string name="sign">收藏</string>
    <string name="today_has_sign">(今日已签到)</string>
    <string name="receive_address">我的足迹</string>
    <string name="my_agent">关于我们</string>
    <string name="i_want_a_teacher">意见反馈</string>
    <string name="start_luck">系统设置</string>
    <string name="invite_reward">协议及声明</string>
    <string name="set">设置</string>
    <string name="clear">清除缓存</string>
    <string name="update">检查更新</string>
    <string name="exit">退出当前账号</string>

    <string name="main_home">首页</string>
    <string name="main_nearby">附近</string>
    <string name="main_order">热门</string>
    <string name="main_mine">我的</string>
    <string name="search_goods">输入商品或店铺</string>
    <string name="comment">快来写下你的评论吧~</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="failure_tip">网络繁忙请稍后再试</string>
    <string name="nodata">暂无数据</string>
</resources>
