<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdtc.sjjms.ui.SystemSettingActivity">

    <!--头部栏-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30px"
            android:drawableLeft="@drawable/basehome_canvas_back_icon"
            android:drawablePadding="3dp"
            android:ellipsize="end"
            android:ems="5"
            android:lines="1"
            android:textColor="@color/app_text_color1"
            android:textSize="@dimen/font_size_middle" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_large"
            android:text="系统设置" />
    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/bg_main" />

    <LinearLayout
        android:id="@+id/ll_clear"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:text="@string/clear" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_right_gray" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/bg_main" />

    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white"
        android:orientation="horizontal">


        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:layout_weight="1"
            android:text="@string/update" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="16dp"
            android:background="@mipmap/ic_right_gray" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/bg_main" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/ll_exit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white">


        <TextView
            android:textSize="16sp"
           android:textColor="@color/tab_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exit" />
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>
